# topologiq

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ETHICAL_NOTICE.md  NOTICE  README.md  README_PATHFINDER.md  citation.cff  multi_target_pathfinder.py  pyproject.toml  requirements-linux.txt  requirements.txt  run.py  run_hyper_params.py  run_hyperparams.py  two_stage_greedy_bfs.py  two_stage_greedy_bfs_config.py
.github/workflows/: ci.yml  test.yml
assets/: qasm_random_03_30.qasm  qasm_random_05_15.qasm  qasm_random_10_10.qasm  qasm_random_10_20.qasm  qasm_random_10_30.qasm  qasm_steane.qasm  random_42_5_10.ang
assets/examples/: cnots_phases.ipynb  cnots_simple.ipynb  pyzx_cnots.ipynb  pyzx_pauli_webs.ipynb  pyzx_phases_t_gates.ipynb
assets/graphs/: pyzx_graphs.py  simple_graphs.py
assets/notebooks/: pyzx_cnots.ipynb  pyzx_pauli_webs.ipynb  pyzx_phases_t_gates.ipynb  qasm_via_pyzx.ipynb
assets/stats/: README.md  performance_runtimes.ipynb
benchmark/: README.md
docs/: __init__.py
docs/examples/: __init__.py  beam-intersections-performance.py  pyzx_cnots.ipynb  pyzx_panel.py  pyzx_random.py  qasm_ghz.py  qasm_panel.py  qasm_random.py  qiskit_ghz.py
docs/notebooks/: pyzx_cnots.ipynb  pyzx_pauli_webs.ipynb  pyzx_phases_t_gates.ipynb  qasm_via_pyzx.ipynb
docs/scripts/: ghz16_qiskit.py  ghz_qiskit.py  random_pyzx.py  random_qiskit.py
e2e/: ghz_panel.py  panel_small.py  qasm_ghz.py  qasm_random.py  qasm_steane.py  qiskit_ghz.py
examples/: steane.py
grapher/: animation.py  grapher.py
scripts/: graph_manager.py  greedy_bfs_traditional.py  pathfinder.py  runner.py  two_stage_greedy_bfs.py
src/topologiq/: __init__.py  debug.py  kwargs.py  main.py  run.py  run_hyperparams.py
src/topologiq/assets/: __init__.py  cnots.bgraph  json_5-5.json  pytket_circuits.py  pyzx_graphs.py  qasm_ghz_200.qasm  qasm_random_05_05.qasm  qasm_random_10_50.qasm  qiskit_circuits.py  qiskit_ghz.qpy  qiskit_save_qpy.py  qrisp_circuits.py  simple_graphs.py  zx_cnots.json
src/topologiq/assets/graphs/: pyzx_graphs.py  qiskit.py  simple_graphs.py
src/topologiq/assets/notebooks/: pyzx_cnots.ipynb  pyzx_pauli_webs.ipynb  pyzx_phases_t_gates.ipynb
src/topologiq/assets/stats/: README.md  performance_runtimes.ipynb
src/topologiq/core/: beams.py  blocks.py  graph.py  paths.py
src/topologiq/core/graph_manager/: __init__.py  beams.py  bfs.py  callers.py  create.py  edge_handlers.py  first_cube.py  graph_manager.py  kwargs.py  query.py  runner.py  transform.py  utils.py
src/topologiq/core/pathfinder/: __init__.py  beams.py  pathfinder.py  spatial.py  symbolic.py  utils.py
src/topologiq/dzw/: AugmentedNxGraph.py  BlockGraphSpace.py  GraphComponents.py  augmented_nx_graph.py
src/topologiq/dzw/common/: attributes_bg.py  attributes_zx.py  components.py  components_bg.py  components_zx.py  coordinates.py  cube_beams.py  path.py
src/topologiq/dzw/helpers/: blockgraph.py  spacetime.py
src/topologiq/dzw/utils/: augmented_nx_graph.py  components_bg.py  coordinates.py  cube_beams.py  path.py
src/topologiq/dzw/visualisation/: report_formatter.py  tikz_writer.py
src/topologiq/input/: __init__.py  pyzx.py  pyzx_manager.py  qbraid_manager.py  simple_graphs.py  utils.py
src/topologiq/scripts/: __init__.py  exploration_vis.py  graph_manager.py  pathfinder.py  runner.py
src/topologiq/test/: __init__.py  ghz_panel.py  inner_pathfinder.py  panel_small.py
src/topologiq/utils/: __init__.py  animation.py  classes.py  core.py  debug.py  e2e.py  grapher.py  grapher_common.py  grapher_pathfinder.py  interop_pyzx.py  misc.py  read_write.py  simple_grapher.py  tests.py  utils_greedy_bfs.py  utils_misc.py  utils_pathfinder.py  utils_zx_graphs.py
src/topologiq/ux/: __init__.py  app.py  app_backup.py  base_pane.py  graph.py  manager.py  spider_cube.py  styles.py  utils.py
src/topologiq/ux/panes/: __init__.py  compile.py  design.py  run.py  simulate.py  stats.py  transform.py
src/topologiq/ux/utils/: __init__.py  aux.py  glue_code.py  highlighter.py  styles.py  vis_blocks.py
src/topologiq/ux/widgets/: bgraph_canvas.py  ide_canvas.py  verify_canvas.py  zx_canvas.py  zx_visual_select.py
src/topologiq/vis/: __init__.py  animation.py  blockgraph.py  common.py  grapher.py  grapher_common.py  simple_grapher.py  zx.py
tests/: __init__.py  conftest.py  test_basic.py  test_basic_imports.py  test_pathfinder.py  test_pathfinding_algorithms.py  test_reproducible_edge_cases.py  test_utils_misc.py
utils/: animation.py  classes.py  constraints.py  examples.py  grapher.py  interop_pyzx.py  pathfinder.py  simple_grapher.py  utils.py  utils_greedy_bfs.py  utils_misc.py  utils_pathfinder.py  utils_zx_graphs.py
