[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "topologiq"
version = "0.1.0"
description = "An algorithmic lattice surgery tool to automatically convert ZX graphs into topologically-correct space-time diagrams for use in Quantum Error Correction"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["topological quantum error correction", "qec", "zx-calculus", "lattice surgery"]
requires-python = ">= 3.10, <3.15"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "comm>=0.2.1",
    "contourpy>=1.3.1",
    "cycler==0.12.1",
    "debugpy>=1.8.10",
    "decorator==5.2.1",
    "dill==0.4.0",
    "executing>=2.2.0",
    "fonttools>=4.50",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "ipykernel>=6.30.0",
    "ipympl==0.9.7",
    "ipython>=8.30,<10.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver>=1.4.8",
    "lark>=1.2.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "networkx>=3.3,<3.6",
    "numpy>=2.2.6,<2.4",
    "packaging==25.0",
    "pandas>=2.0,<2.4",
    "parso>=0.8.4",
    "pexpect==4.9.0",
    "pillow>=11.2.1",
    "platformdirs>=4.3.8",
    "prompt-toolkit>=3.0.50",
    "psutil>=7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing>=3.2.3",
    "pyperclip>=1.9.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyzmq>=27.0.0",
    "pyzx==0.9.0",
    "qiskit==2.1.2",
    "rustworkx==0.17.1",
    "scipy>=1.15,<1.17",
    "six==1.17.0",
    "stack-data==0.6.3",
    "stevedore==5.5.0",
    "tornado>=6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-networkx<=3.5.0.20250918",
    "typing-extensions>=4.14.0",
    "tzdata==2025.2",
    "wcwidth>=0.2.13",
    "widgetsnbextension==4.0.14",
]

[dependency-groups]
test = [
    "pytest<=8.4.1",
    "pytest-cov<=7.0.0",
    "types-networkx<=3.5.0.20250918",
]

dev = [
    "pytest<=8.4.1",
    "pytest-cov<=7.0.0",
    "ruff==0.12.5",  # Fixed version for consistency
    "mypy<=1.18.0",
    "pre-commit<=4.3.0",
    "types-networkx<=3.5.0.20250918",
]

all = [
    {include-group = "test"},
    {include-group = "dev"},
]

[project.urls]
Website = "https://github.com/jbolns/topologiq"
Documentation = "https://github.com/jbolns/topologiq"
Repository = "https://github.com/jbolns/topologiq"
Issues = "https://github.com/jbolns/topologiq/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb", "*.dae"]

[tool.ruff.lint]
# Simplified from tqec - topologiq is early stage
select = ["E", "F", "W", "I", "PL", "RUF"]

ignore = [
  # PLR091{2,3,5} - Complex functions are acceptable for now
  # PLR2004 - Magic values acceptable for algorithm development
  "PLR0912", "PLR0913", "PLR0915", "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
# Tests don't need full documentation
"tests/**/*.py" = ["D"]
"**/*_test.py" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["topologiq"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
# Lenient for early-stage project
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "pyzx",
  "pyzx.*",
  "networkx",
  "networkx.*",
  "matplotlib",
  "matplotlib.*",
  "scipy",
  "scipy.*",
  "pandas",
  "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
