[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "topologiq"
version = "0.1.0"
description = "An algorithmic lattice surgery tool to automatically convert ZX graphs into topologically-correct space-time diagrams for use in Quantum Error Correction"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["topological quantum error correction", "qec", "zx-calculus", "lattice surgery"]
requires-python = ">= 3.10, <3.15"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "ipykernel>=6.30.0",
    "ipympl==0.9.7",
    "ipython>=8.30,<10.0",
    "ipywidgets==8.1.7",
    "matplotlib==3.10.3",
    "networkx>=3.3,<3.6",
    "numpy>=2.2.6,<2.4",
    "pandas>=2.0,<2.4",
    "pillow>=11.2.1",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyzx==0.9.0",
    "qiskit==2.1.2",
    "scipy>=1.15,<1.17",
]

[project.urls]
Website = "https://github.com/jbolns/topologiq"
Documentation = "https://github.com/jbolns/topologiq"
Repository = "https://github.com/jbolns/topologiq"
Issues = "https://github.com/jbolns/topologiq/issues"

[dependency-groups]
dev = [
    "deptry>=0.24.0",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["imageio-ffmpeg", "ipykernel", "ipympl", "ipython", "ipywidgets", "pandas", "numpy", "pywin32", "scipy"]
DEP003 = ["topologiq"]